traces/bug_431.txt
src/femlib/BamgFreeFem.cpp:754: error: DEAD_STORE
  The value written to &iold (type int) is never used.
Showing all 1 steps of the trace


src/femlib/BamgFreeFem.cpp:754:6: Write of unused value
752.   			  bamg::GeometricalEdge * ge= on->ge;
753.   			  int eold = Gh->Number(ge); //
754.   			  int iold = Gh->Number( (*ge)[0] );
            ^
755.   			  int jold = Gh->Number( (*ge)[1] );
756.   			  int s = on->abscisse;
